# Yengine

./: .gitignore  CMakeLists.txt  build.bat
include/: Color.hpp  Game.hpp  MovingObject.hpp  PhysicalObject.hpp  Renderer.hpp
src/: Game.cpp  MovingObject.cpp  PhysicalObject.cpp  Renderer.cpp  main.cpp
